flux/apps/jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      nodeSelector:
        intel.feature.node.kubernetes.io/gpu: "true"
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: "OnRootMismatch"
        readOnlyRootFilesystem: true
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.11.8
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: false
            fsGroup: 2000
            fsGroupChangePolicy: Always
          ports:
            - name: web
              containerPort: 8096
              protocol: TCP
            - name: discov
              containerPort: 7359
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data
              name: jellyfin-media
            - mountPath: /jellyfin-cache
              name: jellyfin-cache
          # readinessProbe:
          #   httpGet:
          #     path: /identity
          #     port: pms
          #     # scheme: HTTPS
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: pms
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: 8G
              cpu: "2"
              gpu.intel.com/i915: "1"
            limits:
              memory: 8G
              cpu: "2"
              gpu.intel.com/i915: "1"
      dnsConfig:
        options:
          - name: ndots
            value: "1"

      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media-qnap
        - name: jellyfin-cache
          emptyDir:
            sizeLimit: 30Gi
