flux/apps/jellyfin/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-web
  namespace: jellyfin
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - jellyfin.tartarus.us

  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
