flux/apps/jellyfin/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-web
  namespace: jellyfin
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.tartarus.us`)
      kind: Rule
      services:
        - name: jellyfin
          kind: Service
          port: 8096
      middlewares:
        - name: https-redirect-middleware
          namespace: jellyfin

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
